force-app/main/default/objects/Car__c/fields/Car_Description__c.field-meta.xml
<CustomField>
    <fullName>Car_Description__c</fullName>
    <label>Car Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>