force-app/main/default/objects/Car__c/fields/Car_Family__c.field-meta.xml
<CustomField>
    <fullName>Car_Family__c</fullName>
    <label>Car Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sedan</fullName>
                <default>true</default>
                <label>Sedan</label>
            </value>
            <value>
                <fullName>SUV</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
            <value>
                <fullName>Hatchback</fullName>
            </value>
            <value>
                <fullName>Minivan</fullName>
            </value>
            <value>
                <fullName>Sports Car</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>