force-app/main/default/objects/Car__c/fields/Current_Average__c.field-meta.xml
<CustomField>
    <fullName>Current_Average__c</fullName>
    <label>Current Average</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>