force-app/main/default/objects/Car__c/fields/Damage_Notes__c.field-meta.xml
<CustomField>
    <fullName>Damage_Notes__c</fullName>
    <inlineHelpText>Notes about any damage to the car</inlineHelpText>
    <label>Damage Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>