force-app/main/default/objects/Car__c/fields/Fuel_Level__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Level__c</fullName>
    <inlineHelpText>Current fuel level of the car</inlineHelpText>
    <label>Fuel Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>3/4</fullName>
            </value>
            <value>
                <fullName>1/2</fullName>
            </value>
            <value>
                <fullName>1/4</fullName>
            </value>
            <value>
                <fullName>Empty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>