force-app/main/default/objects/Car__c/fields/Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Type__c</fullName>
    <label>Fuel Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Transmission_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Petrol</fullName>
                <default>true</default>
                <label>Petrol</label>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Biodiesel</fullName>
            </value>
            <value>
                <fullName>Gasoline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>