force-app/main/default/objects/Car__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <label>Make</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>