force-app/main/default/objects/Car__c/fields/Mileage_Limit_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Limit_Per_Day__c</fullName>
    <label>Mileage Limit Per Day</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>