force-app/main/default/objects/Car__c/fields/PickupLocation__c.field-meta.xml
<CustomField>
    <fullName>PickupLocation__c</fullName>
    <label>Pickup Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Bengaluru</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>