force-app/main/default/objects/Car__c/fields/Primary_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>Primary_Image_Url__c</fullName>
    <label>Primary Image Url</label>
    <type>Url</type>
</CustomField>