force-app/main/default/objects/Car__c/fields/Rental_Rate_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Rental_Rate_Per_Day__c</fullName>
    <label>Rental Rate Per Day</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>