force-app/main/default/objects/Car__c/fields/Service_Countdown__c.field-meta.xml
<CustomField>
    <fullName>Service_Countdown__c</fullName>
    <formula>Next_Service_Date__c -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Countdown</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>