force-app/main/default/objects/Car__c/fields/Total_Bookings_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Bookings_Value__c</fullName>
    <label>Total Bookings Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>