force-app/main/default/objects/Car__c/fields/Transmission_Type__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Type__c</fullName>
    <label>Transmission Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
                <default>true</default>
                <label>Automatic</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>