force-app/main/default/objects/Car__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Make__c</columns>
    <columns>Car_Family__c</columns>
    <columns>Model__c</columns>
    <columns>Availability_Status__c</columns>
    <columns>Fuel_Type__c</columns>
    <columns>PickupLocation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>